--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,6 +10,6 @@
     <header>
         <div th:insert="fragments/navbar" id="navbar"></div>
     </header>
-    <img th:src="@{images/main_page_background.jpg}" alt="background picture" class="backgroundPhoto">
+    <img th:src="@{images/main_page_background.webp}" alt="background picture" class="backgroundPhoto">
 </body>
 </html>
